<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieDetails"
            type="com.matheusxreis.moviedroid.models.MovieDetails" />

        <variable
            name="detailsViewModel"
            type="com.matheusxreis.moviedroid.viewmodels.DetailsViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundSecondaryColor"
        tools:context=".ui.fragments.about.AboutFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer10"
                    hasDetailsResult="@{detailsViewModel}"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="23dp"
                    android:layout_marginEnd="24dp"
                    android:background="@color/placeholder"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/overviewTv"
                    defineTextViewValue="@{movieDetails.overview}"
                    hasDetailsResult="@{detailsViewModel}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/originalTitleLabelTv"
                    hasDetailsResult="@{detailsViewModel}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/original_title"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overviewTv" />

                <TextView
                    android:id="@+id/originalTitleTv"
                    defineTextViewValue="@{movieDetails.title}"
                    hasDetailsResult="@{detailsViewModel}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/originalTitleLabelTv"
                    app:layout_constraintTop_toTopOf="@id/originalTitleLabelTv"
                    tools:text="Puss in Boots: The Last Wish" />

                <TextView
                    android:id="@+id/genreLabelTv"
                    hasDetailsResult="@{detailsViewModel}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/genres"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/originalTitleTv" />

                <TextView
                    android:id="@+id/genreTv"
                    getGenres="@{movieDetails.genres}"
                    hasDetailsResult="@{detailsViewModel}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:maxLines="6"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/originalTitleTv"
                    app:layout_constraintTop_toTopOf="@id/genreLabelTv"
                    tools:text="Drama, Comedy" />

                <TextView
                    android:id="@+id/releasedAtLabelTv"
                    hasDetailsResult="@{detailsViewModel}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/released_at"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genreTv" />

                <TextView
                    android:id="@+id/releasedAtTv"
                    defineTextViewValue="@{movieDetails.realeasedAt}"
                    hasDetailsResult="@{detailsViewModel}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/originalTitleTv"
                    app:layout_constraintTop_toTopOf="@id/releasedAtLabelTv"
                    tools:text="16/04/2020" />


                <TextView
                    android:id="@+id/castLabelTv"
                    hasDetailsResult="@{detailsViewModel}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/cast2"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/releasedAtTv" />

                <com.todkars.shimmer.ShimmerRecyclerView
                    app:shimmer_recycler_layout="@layout/credits_row_placeholder"
                    app:shimmer_recycler_item_count="4"
                    hasDetailsResult="@{detailsViewModel}"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginTop="0dp"
                    tools:listitem="@layout/credits_row_layout"
                    android:id="@+id/castRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintBottom_toTopOf="@id/crewRecyclerView"
                    app:layout_constraintTop_toBottomOf="@id/castLabelTv" />
                <TextView
                    android:id="@+id/crewLabelTv"
                    hasDetailsResult="@{detailsViewModel}"
                    app:layout_goneMarginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/crew"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/castRecyclerView" />

                <com.todkars.shimmer.ShimmerRecyclerView
                    app:shimmer_recycler_layout="@layout/credits_row_placeholder"
                    app:shimmer_recycler_item_count="4"
                    hasDetailsResult="@{detailsViewModel}"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/credits_row_layout"
                    android:id="@+id/crewRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintTop_toBottomOf="@id/crewLabelTv" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>